vlib/v/checker/tests/alias_type_exists.out
vlib/v/checker/tests/alias_type_exists.vv:1:15: error: unknown type `Bird`
    1 | type Pigeon = Bird
      |               ~~~~